fix: remove previous version of an app when installing [DHIS2-15766]