@@ -37,12 +37,12 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Consumer;
 import java.util.regex.Pattern;
 import java.util.zip.ZipEntry;
@@ -96,7 +96,7 @@ public class JCloudsAppStorageService implements AppStorageService {
   private static final long FIVE_MINUTES_IN_SECONDS =
       Minutes.minutes(5).toStandardDuration().getStandardSeconds();
 
-  private Map<String, App> reservedNamespaces = new HashMap<>();
+  private final Map<String, App> reservedNamespaces = new ConcurrentHashMap<>();
 
   private BlobStore blobStore;
 
@@ -115,7 +115,7 @@ public class JCloudsAppStorageService implements AppStorageService {
   private static final String JCLOUDS_PROVIDER_KEY_TRANSIENT = "transient";
 
   private static final List<String> SUPPORTED_PROVIDERS =
-      Arrays.asList(
+      List.of(
           JCLOUDS_PROVIDER_KEY_FILESYSTEM,
           JCLOUDS_PROVIDER_KEY_AWS_S3,
           JCLOUDS_PROVIDER_KEY_TRANSIENT);
@@ -280,7 +280,7 @@ public class JCloudsAppStorageService implements AppStorageService {
     if (namespace != null
         && !namespace.isEmpty()
         && reservedNamespaces.containsKey(namespace)
-        && !app.equals(reservedNamespaces.get(namespace))) {
+        && !app.getKey().equals(reservedNamespaces.get(namespace).getKey())) {
       log.error(
           String.format(
               "Failed to install app '%s': Namespace '%s' already taken.",
@@ -384,6 +384,16 @@ public class JCloudsAppStorageService implements AppStorageService {
                     }
                   });
 
+      // make sure only one version of an app is installed
+      // so if we successfully install this version the old version is removed
+      Optional<App> existingApp = appCache.getIfPresent(app.getKey());
+      if (existingApp.isPresent()) {
+        App before = existingApp.get();
+        if (before.getAppStorageSource() == AppStorageSource.JCLOUDS) {
+          deleteApp(before);
+        }
+      }
+
       String namespace = app.getActivities().getDhis().getNamespace();
       if (namespace != null && !namespace.isEmpty()) {
         reservedNamespaces.put(namespace, app);
@@ -404,6 +414,7 @@ public class JCloudsAppStorageService implements AppStorageService {
       // -----------------------------------------------------------------
 
       app.setAppState(AppStatus.OK);
+
       return app;
     } catch (ZipException e) {
       log.error("Failed to install app: Invalid ZIP format", e);
